# Tranquil-OS

./: #DESIGN PHILOSOPHY.md#  DESIGN PHILOSOPHY.md  LICENSE  README.md
tranquil_os/: Cargo.toml
tranquil_os/.cargo/: config.toml
tranquil_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tranquil_os/tests/: basic_boot.rs
