[package]
name = "tranquil_os"
version = "0.1.0"
edition = "2021"
authors = ["Lakshy Sharma lakshy1106@protonmail.com"]
repository = "https://github.com/lakshy-sharma/Tranquil-OS"
license-file = "LICENSE.txt"
keywords = ["kernel", "os"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
# Using the spinlock mutex instead of standard ones.
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]